fix: slight horizontal scroll on mobile due to scrollbar

--- a/styles.css
+++ b/styles.css
@@ -307,6 +307,9 @@ p {
 }
 
 @media (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
   .fake-image {
     display: none;
   }
